@@ -58,9 +58,9 @@
 #define HAVE_DEBUG_OUTPUT	1
  */
 
-/* Enable the v1 API
+/* Disable warning C4201: nonstandard extension used : nameless struct/union
  */
-#define HAVE_V1_API		1
+#pragma warning( disable : 4201 )
 
 #endif
 
